# crocoddyl_plotter

./: CMakeLists.txt  README.md
client-app/: CMakeLists.txt  grpc-client.cpp  grpc-client.h  main.cpp  mainwindow.cpp  mainwindow.h
include/crocoddyl_plotter/: mim_solvers_callbacks.hpp
proto/: CMakeLists.txt  crocoddyl.proto
python/: CMakeLists.txt  main.cpp  mim-solvers-callbacks.cpp  python.hpp
python/crocoddyl_plotter/: __init__.py
src/: mim_solvers_callbacks.cpp
